readme yazıldı ve swagger güncellendi
