# src/configs/swagger.json
@@ -202,11 +202,7 @@
     },
     "/tokens/": {
       "get": {
-        "tags": [
-          "Tokens"
-        ],
-        "summary": "List Tokens",
-        "description": "\r  You can send query with endpoint for filter[], search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
@@ -214,10 +210,6 @@
         }
       },
       "post": {
-        "tags": [
-          "Tokens"
-        ],
-        "summary": "Create Token",
         "description": "",
         "responses": {
           "201": {
@@ -228,10 +220,6 @@
     },
     "/tokens/{id}": {
       "get": {
-        "tags": [
-          "Tokens"
-        ],
-        "summary": "Get Single Token",
         "description": "",
         "parameters": [
           {
@@ -248,10 +236,6 @@
         }
       },
       "put": {
-        "tags": [
-          "Tokens"
-        ],
-        "summary": "Update Token",
         "description": "",
         "parameters": [
           {
@@ -268,10 +252,6 @@
         }
       },
       "delete": {
-        "tags": [
-          "Tokens"
-        ],
-        "summary": "Delete Token",
         "description": "",
         "parameters": [
           {
@@ -291,10 +271,6 @@
         }
       },
       "patch": {
-        "tags": [
-          "Tokens"
-        ],
-        "summary": "Update Token",
         "description": "",
         "parameters": [
           {
