# src/controllers/token.js
@@ -5,19 +5,6 @@ const Token = require("../models/token")
 module.exports = {
 
     list: async (req, res) => {
-        /*
-            #swagger.tags = ["Tokens"]
-            #swagger.summary = "List Tokens"
-            #swagger.description = `
-                You can send query with endpoint for filter[], search[], sort[], page and limit.
-                <ul> Examples:
-                    <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
-                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
-                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
-                    <li>URL/?<b>page=2&limit=1</b></li>
-                </ul>
-            `
-        */
         
         const data = await res.getModelList(Token)
 
@@ -29,10 +16,6 @@ module.exports = {
     },
 
     create: async (req, res) => {
-        /*
-            #swagger.tags = ["Tokens"]
-            #swagger.summary = "Create Token"
-        */
         
         const data = await Token.create(req.body)
 
@@ -43,10 +26,6 @@ module.exports = {
     },
 
     read: async (req, res) => {
-        /*
-            #swagger.tags = ["Tokens"]
-            #swagger.summary = "Get Single Token"
-        */
 
         const data = await Token.findOne({ _id: req.params.id })
 
@@ -57,10 +36,6 @@ module.exports = {
     },
 
     update: async (req, res) => {
-        /*
-            #swagger.tags = ["Tokens"]
-            #swagger.summary = "Update Token"
-        */
 
         const data = await Token.updateOne({ _id: req.params.id }, req.body, { runValidators: true })
 
@@ -72,10 +47,6 @@ module.exports = {
     },
 
     delete: async (req, res) => {
-        /*
-            #swagger.tags = ["Tokens"]
-            #swagger.summary = "Delete Token"
-        */
 
         const data = await Token.deleteOne({ _id: req.params.id })
 
